--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "uni-shop",
-    "appid" : "",
+    "appid" : "__UNI__0039D11",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
@@ -53,10 +53,10 @@
         "appid" : "wx1cf626c1cc17d519",
         "setting" : {
             "urlCheck" : false,
-						"checkSiteMap": false
+            "checkSiteMap" : false
         },
         "usingComponents" : true,
-				"requiredPrivateInfos": ["chooseAddress"]
+        "requiredPrivateInfos" : [ "chooseAddress" ]
     },
     "mp-alipay" : {
         "usingComponents" : true
